apps/rounds/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rounds
  namespace: managoat-demos
  labels:
    app: rounds
spec:
  type: ClusterIP
  selector:
    app: rounds
  ports:
    - port: 80
      targetPort: 8080
